Update contents, layout New UGC User generated content feature from Apollo

--- a/src/main/vfs/sites/default/express-news/.content/layout/layout-00001.xml
+++ b/src/main/vfs/sites/default/express-news/.content/layout/layout-00001.xml
@@ -2,6 +2,6 @@
 
 <ExpressNewsLayouts xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="opencms://system/modules/com.my.express.news/schemas/layout.xsd">
   <ExpressNewsLayout language="en">
-    <Title/>
+    <Type><![CDATA[Default]]></Type>
   </ExpressNewsLayout>
 </ExpressNewsLayouts>
